--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,5 +17,10 @@ pipeline {
                 echo 'Deploying....'
             }
         }
+        stage("Env Variables"){
+            steps{
+                bat "set"                                                     
+            }
+        }
     }
 }
