--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,11 @@ pipeline {
     agent any
 
     stages {
+     stage("Env Variables"){
+            steps{
+                sh "printenv"                                                     
+            }
+        }
         stage('Build') {
             steps {
                 echo 'Building..'
